--- a/Trace6/index.html
+++ b/Trace6/index.html
@@ -73,7 +73,7 @@
         }
 
         // Change this depending on the name of PHP or XML file
-        downloadUrl(/*'http://localhost/trace6/trace6.xml'*/ 'trace6.xml', function(data) {
+        downloadUrl(/*'http://localhost/trace6/trace6.xml'*/ 'Trace6_with_3cables.xml', function(data) {
           var xml = data.responseXML;
           var marker = xml.documentElement.getElementsByTagName('marker');
           
