--- a/Phase_2/5countries_link/index2.html
+++ b/Phase_2/5countries_link/index2.html
@@ -30,7 +30,7 @@
         var script = document.createElement('script');
         // This example uses a local copy of the GeoJSON stored at
         // http://earthquake.usgs.gov/earthquakes/feed/v1.0/summary/2.5_week.geojsonp
-        script.src = '/All_countries.js';
+        script.src = 'All_countries.js';
         document.getElementsByTagName('head')[0].appendChild(script);
       }
 
