minor change (might be useful to keep the recent shortest path on the map)

--- a/wan_server/src/main/resources/public/index2.html
+++ b/wan_server/src/main/resources/public/index2.html
@@ -332,10 +332,11 @@
             zIndex: 10
           });
           
-          // we make disappear all preceding shortest paths on the map (for now)
+          /* we make disappear all preceding shortest paths on the map (for now)
           for (var i in polylinesShowingShortestPaths) {
             polylinesShowingShortestPaths[i].setMap(null);
           }
+          */
           polyline.setMap(map);
           polylinesShowingShortestPaths.push(polyline);
         }
