--- a/wan_server/src/main/resources/public/index.html
+++ b/wan_server/src/main/resources/public/index.html
@@ -118,11 +118,11 @@
         var topo = topos[topoId];
         nodes[topoId] = {};
         for (var i = 0; i < topo.nodes.length; i++) {
-          var Lat = topo.nodes[i].Latitude;
-          var Lng = topo.nodes[i].Longitude;
+          var Lat = topo.nodes[i].latitude;
+          var Lng = topo.nodes[i].longitude;
           var coordinates = {lat: Lat, lng: Lng};
           var label = topo.nodes[i].id;
-          var country = topo.nodes[i].Country;
+          var country = topo.nodes[i].country;
 
           nodes[topoId][label] = coordinates;
 
