--- a/wan_server/src/main/resources/public/index.html
+++ b/wan_server/src/main/resources/public/index.html
@@ -222,10 +222,8 @@
         var input1 = $(":input[name='fname']");
         var input2 = $(":input[name='fname2']");
         if (input1.val() === '' || input2.val() === '') {
-          input1.val('Paris, France');
-          input2.val('Marseille, France');
-          //$('<div>', { html: 'Please provide a source and a destination' }).css({'color': 'red'}).appendTo('#dashboard');
-          //return;
+          $('<div>', { html: 'Please provide a source and a destination' }).css({'color': 'red'}).appendTo('#dashboard');
+          return;
         }
         countryId = input1.val().substr( input1.val().lastIndexOf(',') + 2 );
         // Special cases
